# docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api/v1
 definitions:
+  dto.CreateArticleRequest:
+    properties:
+      body:
+        type: string
+      title:
+        type: string
+    required:
+    - body
+    - title
+    type: object
   dto.LogInRequest:
     properties:
       email:
@@ -27,6 +37,23 @@ definitions:
     - email
     - password
     - username
+    type: object
+  model.Article:
+    properties:
+      body:
+        type: string
+      created_at:
+        type: string
+      secure_id:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/model.User'
+      views:
+        type: integer
     type: object
   model.User:
     properties:
@@ -59,6 +86,33 @@ info:
   title: Ordent Test API
   version: "1.0"
 paths:
+  /articles:
+    post:
+      consumes:
+      - application/json
+      description: Create an article with the provided data
+      parameters:
+      - description: Article data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateArticleRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Article'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      tags:
+      - articles
   /auth/login:
     post:
       consumes:
