# internal/dto/article.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateArticleRequest struct {
+	Title string `json:"title" binding:"required"`
+	Body  string `json:"body" binding:"required"`
+}
