# internal/router/router.go
@@ -16,11 +16,17 @@ func NewRouter(db *gorm.DB) *gin.Engine {
 	r := gin.Default()
 
 	userRepo := repository.NewUserRepository(db)
+	articleRepo := repository.NewArticleRepository(db)
 
 	authService := service.NewAuthService(userRepo)
+	articleService := service.NewArticleService(articleRepo)
+
 	authHandler := handler.NewAuthHandler(authService)
+	articleHandler := handler.NewArticleHandler(articleService)
 
 	docs.SwaggerInfo.Title = "Ordent Test API"
+
+	authMiddleware := middleware.AuthMiddleware(userRepo)
 
 	r.GET("/ping", func(ctx *gin.Context) {
 		ctx.JSON(200, gin.H{
@@ -35,7 +41,13 @@ func NewRouter(db *gorm.DB) *gin.Engine {
 			auth.POST("/login", authHandler.LogIn)
 			auth.POST("/register", authHandler.Register)
 
-			auth.GET("/me", middleware.AuthMiddleware(), authHandler.Me)
+			auth.GET("/me", authMiddleware, authHandler.Me)
+		}
+
+		articles := v1.Group("/articles")
+		articles.Use(authMiddleware)
+		{
+			articles.POST("", articleHandler.CreateArticle)
 		}
 	}
 
